--- a/index.html
+++ b/index.html
@@ -7,6 +7,65 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <div class="container hero-header">
+            <div class="logo">
+                Header Logo
+            </div>
+            <div class="links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+        <div class="container hero-content">
+            <div class="hero-text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-image">
+                <img src="https://via.placeholder.com/400x200" alt="this is a placeholder for an image">
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="container">
+            <h2>Some random information.</h2>
+            <div class="info-items">
+                    <div class="info-item">
+                        <img src="https://via.placeholder.com/150" alt="info image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-item">
+                        <img src="https://via.placeholder.com/150" alt="info image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-item">
+                        <img src="https://via.placeholder.com/150" alt="info image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="info-item">
+                        <img src="https://via.placeholder.com/150" alt="info image">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="container">
+            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="footer-text">
+                <p class="footer-title">Call to action! It's time!</p>
+                <p class="footer-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
