--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
 </head>
 <body>
     <div class="hero">
-        <div class="container hero-header">
-            <div class="logo">
+        <div class="hero-header">
+            <div class="hero-header-logo">
                 Header Logo
             </div>
-            <div class="links">
+            <div class="hero-header-links">
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
                 <a href="#">header link three</a>
             </div>
         </div>
-        <div class="container hero-content">
-            <div class="hero-text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
+        <div class="hero-content">
+            <div class="hero-content-text">
+                <h1 class="hero-content-text-title">This website is awesome</h1>
+                <p class="hero-content-text-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="hero-content-text-button">Sign up</button>
             </div>
-            <div class="hero-image">
+            <div class="hero-content-image">
                 <img src="https://via.placeholder.com/400x200" alt="this is a placeholder for an image">
             </div>
         </div>
     </div>
     <div class="info">
-        <div class="container">
-            <h2>Some random information.</h2>
-            <div class="info-items">
-                    <div class="info-item">
+        <div class="info-title">
+            Some random information.
+        </div>
+        <div class="info-items">
+            <div class="info-item">
                         <img src="https://via.placeholder.com/150" alt="info image">
                         <p>this is some subtext under an illustration or image</p>
                     </div>
@@ -53,18 +54,21 @@
         </div>
     </div>
     <div class="quote">
-        <div class="container">
-            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="quote-author">-Thor, God of Thunder</p>
+        <div class="quote-text">
+            <p class="quote-text-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-text-author">-Thor, God of Thunder</p>
         </div>
     </div>
+    <div class="call-to-action">
+        <div class="call-to-action-content">
+            <p class="call-to-action-title">Call to action! It's time!</p>
+            <p class="call-to-action-description">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="call-to-action-button">Sign up</button>
+    </div>
     <div class="footer">
-        <div class="container">
-            <div class="footer-text">
-                <p class="footer-title">Call to action! It's time!</p>
-                <p class="footer-text">Sign up for our product by clicking that button right over there!</p>
-            </div>
-            <button>Sign up</button>
+        <div class="footer-container">
+            <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
         </div>
     </div>
 </body>
