--- a/index.html
+++ b/index.html
@@ -35,31 +35,30 @@
         </div>
         <div class="info-items">
             <div class="info-item">
-                        <img src="https://via.placeholder.com/150" alt="info image">
-                        <p>this is some subtext under an illustration or image</p>
-                    </div>
-                    <div class="info-item">
-                        <img src="https://via.placeholder.com/150" alt="info image">
-                        <p>this is some subtext under an illustration or image</p>
-                    </div>
-                    <div class="info-item">
-                        <img src="https://via.placeholder.com/150" alt="info image">
-                        <p>this is some subtext under an illustration or image</p>
-                    </div>
-                    <div class="info-item">
-                        <img src="https://via.placeholder.com/150" alt="info image">
-                        <p>this is some subtext under an illustration or image</p>
-                    </div>
+                <img src="https://via.placeholder.com/150" alt="info image">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-item">
+                <img src="https://via.placeholder.com/150" alt="info image">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-item">
+                <img src="https://via.placeholder.com/150" alt="info image">
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-item">
+                <img src="https://via.placeholder.com/150" alt="info image">
+                <div>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
-    <div class="quote">
+    <!-- <div class="quote">
         <div class="quote-text">
             <p class="quote-text-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="quote-text-author">-Thor, God of Thunder</p>
         </div>
-    </div>
-    <div class="call-to-action">
+    </div> -->
+    <!-- <div class="call-to-action">
         <div class="call-to-action-content">
             <p class="call-to-action-title">Call to action! It's time!</p>
             <p class="call-to-action-description">Sign up for our product by clicking that button right over there!</p>
@@ -70,6 +69,6 @@
         <div class="footer-container">
             <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
