--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="hero-content-text-button">Sign up</button>
                 </div>
                 <div class="hero-content-image">
-                    <img src="https://via.placeholder.com/400x200" alt="this is a placeholder for an image">
+                    <img src="images/main.png" alt="this is a placeholder for an image">
                 </div>
             </div>
         </div>
@@ -36,19 +36,19 @@
             </h2>
             <div class="info-items">
                 <div class="info-item">
-                    <img src="https://via.placeholder.com/150" alt="info image">
+                    <img src="images/image-1.jpg" alt="info image">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-item">
-                    <img src="https://via.placeholder.com/150" alt="info image">
+                    <img src="images/image-2.jpg" alt="info image">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-item">
-                    <img src="https://via.placeholder.com/150" alt="info image">
+                    <img src="images/image-3.jpg" alt="info image">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-item">
-                    <img src="https://via.placeholder.com/150" alt="info image">
+                    <img src="images/image-4.jpg" alt="info image">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
